# streamly-string

./: CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  streamly-string.cabal
app/: Main.hs
