cabal-version:      3.0
name:               streamly-string
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Julian Ospald
maintainer:         hasufell@posteo.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common ghcopts
    ghc-options: -O2
                 -fdicts-strict
                 -fspec-constr-recursive=16
                 -fmax-worker-args=16
                 -threaded
                 -with-rtsopts=-N

executable streamly-string
    import:           ghcopts
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      streamly-core,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010

